Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-5947

Memory leak in code completion

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.4.0
    • Qt Creator 2.3.0-beta, Qt Creator 2.3.0-rc, Qt Creator 2.3.0
    • None
    • Windows 7 x86_64, Microsoft Visual Studio 2008
    • e15443e9523df0e40414b1baf7d8182f641f7f2c

    Description

      I noticed a memory leak in the code completion.
      Steps to reproduce:
      1. Create console project.
      2. Add #include <windows.h>
      3. Open Process Explorer.
      4. Press Ctrl+Space several times
      5. Look for memory consumption.

      I watched the memory allocation without releasing

      Attachments

        1. qtcreator.png
          41 kB
          Aleksei Mikhailichenko
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            leamelo Leandro T. C. Melo
            mich Aleksei Mikhailichenko
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes