src/plugins/cpptools/cppcompletionassist.cpp
@@ -775,6 +775,7 @@ IAssistProposal *CppCompletionAssistProcessor::createContentProposal()
                 }
             }
         } else {
+            delete *it;
             it = m_completions.erase(it);
         }
     }
